k8s/base/fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  labels:
    app: fastapi

spec:
  replicas: 1

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      # Comme dans les autres services pour uniformiser les permissions
      securityContext:
        runAsUser: 0
        #runAsGroup: 0
        fsGroup: 1000

      containers:
        - name: fastapi
          image: docker.io/library/accidents_severity-fastapi:1.0
          #imagePullPolicy: IfNotPresent
          # Configuration pour forcer l'utilisation de l'image locale
          imagePullPolicy: Never

          resources:
            # Le request réserve physiquement la mémoire
            # Le request vérifie que le CPU restant >= cpu sinon il ne démarre pas le pod
            # d'où la faible valeur car on a bcp de services
            requests:
              memory: "256Mi" # Ce qu'il demande au démarrage
              cpu: "50m"      # 0.05 vCPU
            limits:
              memory: "1Gi"  # Le plafond à ne pas dépasser
              cpu: "1000m"   # 1.0 vCPU maximum

          #command: ["/bin/sh", "-c", "sleep 3600"]
          # On ignore tout ce qui est dans le Dockerfile (CMD/ENTRYPOINT) ça ça génère une erreur
          command: ["python3"]
          args: ["-m", "uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--forwarded-allow-ips", "*"]
          workingDir: /app

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5

          volumeMounts:
            - name: data
              mountPath: /app/data

            - name: artifacts
              mountPath: /app/artifacts

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: fastapi-pvc

        - name: artifacts
          persistentVolumeClaim:
            claimName: mlflow-artifacts-pvc
